syntax = "proto3";

package androidx.glance.appwidget.proto;

option java_package  = "androidx.glance.appwidget.proto";
option java_outer_classname = "LayoutProto";

message LayoutConfig {
  repeated LayoutDefinition layout = 1;
  int32 next_index = 2;
}

message LayoutDefinition {
  LayoutNode layout = 1;
  int32 layout_index = 2;
}

message LayoutNode {
  LayoutType type = 1;
  DimensionType width = 2;
  DimensionType height = 3;
  HorizontalAlignment horizontal_alignment = 4;
  VerticalAlignment vertical_alignment = 5;
  ContentScale image_scale = 6;
  NodeIdentity identity = 8;
  bool hasAction = 9;
  repeated LayoutNode children = 7;
  bool has_image_description = 10;
  bool has_image_color_filter = 11;
  bool has_image_alpha = 12;
}

enum ContentScale {
  UNSPECIFIED_CONTENT_SCALE = 0;
  FIT = 1;
  CROP = 2;
  FILL_BOUNDS = 3;
}

enum HorizontalAlignment {
  UNSPECIFIED_HORIZONTAL_ALIGNMENT = 0;
  START = 1;
  CENTER_HORIZONTALLY = 2;
  END = 3;
}

enum VerticalAlignment {
  UNSPECIFIED_VERTICAL_ALIGNMENT = 0;
  TOP = 1;
  CENTER_VERTICALLY = 2;
  BOTTOM = 3;
}

enum DimensionType {
  UNKNOWN_DIMENSION_TYPE = 0;
  EXACT = 1;
  WRAP = 2;
  FILL = 3;
  EXPAND = 4;
}

enum NodeIdentity {
  DEFAULT_IDENTITY = 0;
  BACKGROUND_NODE = 1;
}

enum LayoutType {
  UNKNOWN_TYPE = 0;
  ROW = 1;
  COLUMN = 2;
  BOX = 3;
  TEXT = 4;
  LAZY_COLUMN = 5;
  LIST_ITEM = 6;
  CHECK_BOX = 7;
  BUTTON = 8;
  SPACER = 9;
  SWITCH = 10;
  ANDROID_REMOTE_VIEWS = 11;
  REMOTE_VIEWS_ROOT = 12;
  IMAGE = 13;
  LINEAR_PROGRESS_INDICATOR = 14;
  CIRCULAR_PROGRESS_INDICATOR = 15;
  LAZY_VERTICAL_GRID = 16;
  VERTICAL_GRID_ITEM = 17;
  RADIO_GROUP = 18;
  RADIO_BUTTON = 19;
  RADIO_ROW = 20;
  RADIO_COLUMN = 21;
  SIZE_BOX = 22;
}

message AsyncRequest {
  oneof request {
    Update update = 1;
    OptionsChanged options_changed = 2;
    Delete delete = 3;
    Lambda lambda = 4;
    RunCallback run_callback = 5;
    MyPackageReplaced my_package_replaced = 6;
  }

  message Update {
    string receiver = 1;
    repeated int32 app_widget_ids = 2;
  }

  message OptionsChanged {
    string receiver = 1;
    int32 app_widget_id = 2;
    bytes bundle = 3;
  }

  message Delete {
    string receiver = 1;
    repeated int32 app_widget_ids = 2;
  }

  message Lambda {
    string receiver = 1;
    int32 app_widget_id = 2;
    string actionKey = 3;
  }

  message RunCallback {
    string class_name = 1;
    int32 app_widget_id = 2;
    bytes action_parameters = 3;
  }

  message MyPackageReplaced {}
}